2009-12-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, providerMgr.h:
	[ 2914435 ] providers should receive param info from providerRegister

2009-12-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2910372 ] Provider user and params strdup'd but never free'd

	* support.c, sfcBroker.c, providerRegister.h, providerRegister.c:
	[ 2913067 ] Unused arg for newProviderRegister()

2009-12-09 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* test/xmltest/execQuery24/25.*,enumerateInstanceNames.SFCB_IndicationServiceCapabilities.*, enumerateInstances.SFCB_IndicationServiceCapabilities.*, test/unittests/newDateTime.c, test/unittests/Makefile.am
	[  2859885 ] New exec query and enumeration test cases

2009-12-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, 
	  test/TestProviders/tests/IndTest3CreateSubscription.lines,IndTest3CreateSubscription.xml,
	    IndTest5DeleteSubscription.xml,
	  test/xmltest/Indication03CreateSubscription.OK, Indication11DeleteSubscription.xml:
	[ 2908421 ] IndicationProfile: IndicationSubscription - RI props
		Change classname when CIM_IndicationSubscription is created.

2009-12-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c:
	Repealed original fix for 2818014

	* result.c:
	[ 2900630 ] Allow for instances > chunkSize when chunking enabled
	
2009-12-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 10_interop.mof,default.reg.in,interopProvider.c:
	[ 2908421 ] IndicationProfile: IndicationSubscription - RI props

2009-11-19  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* test/unittest/Makefile.am, test/unittest/genericlist.c
	[ 2859885 ] unittest case for generic list functions

2009-11-18  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* msgQueue.h, msgqueue.c, providerMgr.c, sfcBroker.c, test/TestProviders/cmpiTestAssociationProvider.c
	[ 2532149 ] sfcb: instance ops against non-instance MI report no error
